feat: :sparkles: Implementação do endpoint que lista os produtos
